name:                project-euler-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/slfotg/project-euler-hs#readme
author:              Sam Foster
maintainer:          slfotg@gmail.com
copyright:           2017 Sam Foster
category:            project-euler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Number.Util
                     , Data.LookupTree
                     , Primes.Simple
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable 001
  hs-source-dirs:      problems/001
  main-is:             001.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 002
  hs-source-dirs:      problems/002
  main-is:             002.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 003
  hs-source-dirs:      problems/003
  main-is:             003.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 004
  hs-source-dirs:      problems/004
  main-is:             004.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 005
  hs-source-dirs:      problems/005
  main-is:             005.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 006
  hs-source-dirs:      problems/006
  main-is:             006.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 007
  hs-source-dirs:      problems/007
  main-is:             007.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 008
  hs-source-dirs:      problems/008
  main-is:             008.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 009
  hs-source-dirs:      problems/009
  main-is:             009.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 010
  hs-source-dirs:      problems/010
  main-is:             010.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 012
  hs-source-dirs:      problems/012
  main-is:             012.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 013
  hs-source-dirs:      problems/013
  main-is:             013.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 014
  hs-source-dirs:      problems/014
  main-is:             014.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, project-euler-hs
  default-language:    Haskell2010

executable 015
  hs-source-dirs:      problems/015
  main-is:             015.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 016
  hs-source-dirs:      problems/016
  main-is:             016.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 017
  hs-source-dirs:      problems/017
  main-is:             017.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 018
  hs-source-dirs:      problems/018
  main-is:             018.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 019
  hs-source-dirs:      problems/019
  main-is:             019.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 020
  hs-source-dirs:      problems/020
  main-is:             020.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 021
  hs-source-dirs:      problems/021
  main-is:             021.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
  default-language:    Haskell2010

executable 022
  hs-source-dirs:      problems/022
  main-is:             022.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 024
  hs-source-dirs:      problems/020
  main-is:             020.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, project-euler-hs
  default-language:    Haskell2010

executable 025
  hs-source-dirs:      problems/025
  main-is:             025.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 030
  hs-source-dirs:      problems/030
  main-is:             030.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 031
  hs-source-dirs:      problems/031
  main-is:             031.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 034
  hs-source-dirs:      problems/034
  main-is:             034.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 036
  hs-source-dirs:      problems/036
  main-is:             036.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 048
  hs-source-dirs:      problems/048
  main-is:             048.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 056
  hs-source-dirs:      problems/056
  main-is:             056.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, project-euler-hs
  default-language:    Haskell2010

executable 057
  hs-source-dirs:      problems/057
  main-is:             057.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, project-euler-hs
  default-language:    Haskell2010

executable 067
  hs-source-dirs:      problems/067
  main-is:             067.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 074
  hs-source-dirs:      problems/074
  main-is:             074.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , project-euler-hs
                     , containers
  default-language:    Haskell2010

executable 076
  hs-source-dirs:      problems/076
  main-is:             076.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
  default-language:    Haskell2010

executable 081
  hs-source-dirs:      problems/081
  main-is:             081.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable 226
  hs-source-dirs:      problems/226
  main-is:             226.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

-- test-suite helloworld-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , helloworld
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/slfotg/project-euler-hs
